--- a/css/screens/tienda/mobileBig-tabletSmall.css
+++ b/css/screens/tienda/mobileBig-tabletSmall.css
@@ -1,124 +1,7 @@
-.nav-header-center {
-  display: block;
+.banner {
+  display: block !important;
 }
 
-.aside-left-cerrado {
-  align-items: flex-start;
-  text-align: start;
-  padding-left: 40px;
-  width: 240px;
-}
-
-.aside-left-abierto {
-  align-items: flex-start;
-  text-align: start;
-  padding-left: 40px;
-  width: 240px;
-  height: 100vh;
-  overflow: auto;
-}
-
-/* Scroll personalizado */
-
-.aside-left-abierto::-webkit-scrollbar {
-  width: 7px;
-}
-
-.aside-left-abierto::-webkit-scrollbar-thumb {
-  background-color: var(--ColorGris);
-  border-radius: 5px;
-  height: 70%;
-}
-
-.about {
-  display: block;
-}
-
-.separador-aside:nth-of-type(3) {
-  display: block;
-}
-
-.menu {
-  margin-left: 0;
-  position: sticky;
-}
-
-aside .logo-aside {
-  justify-content: flex-start;
-  margin-left: 0;
-}
-
-aside .logo-aside .logo-header {
-  margin-left: 20px;
-}
-
-.login-registrer-visible {
-  top: 55px;
-  right: 95px;
-  width: 350px;
-  height: 500px;
-  border: 1px solid var(--ColorGrisObscuro);
-  border-radius: 5px;
-}
-
-/* Estilos para la seccion Presentacion */
-
-.presentacion__title {
-  font-size: 6rem;
-}
-
-.presentacion__subTitle {
-  font-size: 1.6rem;
-}
-
-.separador__presentacion {
-  width: 450px;
-}
-
-.presentacion__text {
-  font-size: 1.4rem;
-}
-
-.btn-presentacion {
-  width: 240px;
-  height: 60px;
-  font-size: 1.2rem;
-}
-
-/* Estilos para la seccion categorias */
-
-.categorias {
-  width: 95vw;
-}
-
-.categorias__contenedor-componentes {
-  flex-direction: row;
-  justify-content: center;
-}
-
-.conponent-categoria {
-  margin: 0 20px;
-  width: 200px;
-  height: 230px;
-}
-
-.conocenos,
-.conocenos__gradient {
-  width: 95vw;
-}
-
-/* Estilos para la pantalla de registro */
-
-.main-registro {
-  flex-direction: row;
-  justify-content: space-between !important;
-}
-
-.imgRegistro {
-  display: block;
-}
-
-.imgRegistro img {
-  position: relative;
-  right: 500px;
+.productos {
+  grid-template-columns: auto auto;
 }
