--- a/css/screens/tienda/tablet.css
+++ b/css/screens/tienda/tablet.css
@@ -1,47 +1,17 @@
-
-.footer__information {
-  padding-top: 0;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+.banner {
+  height: 500px;
 }
 
-.footer__separador {
-  width: 2px;
-  height: 180px;
-  margin: 30px;
+.productosTitle {
+  align-self: flex-start;
+  margin-left: 50px;
+  margin-top: 20px;
 }
 
-.footer__derechos p {
-  width: 100%;
+.inicio__separador {
+  align-self: flex-start;
+  margin-left: 50px;
+  width: 100px;
 }
 
-/* Estilos para la pagina de registro */
 
-.imgRegistro img {
-  right: 400px;
-}
-
-/* Estilos para la pantalla Contacto */
-
-.main-contacto {
-  justify-content: space-around;
-}
-
-.main-contacto {
-  height: 600px;
-  flex-direction: row;
-}
-
-.contacto-datos {
-  width: 50vw;
-}
-
-.contacto-datos__title {
-  width: 55vw;
-  text-align: start;
-}
-
-.contacto-enviarMensaje {
-  width: 40%;
-}
