--- a/src/styles/components/atoms/logo.scss
+++ b/src/styles/components/atoms/logo.scss
@@ -1,7 +1,5 @@
 @mixin logo {
     .header_logo {
-        position: relative;
-        bottom: 0.3rem;
         text-decoration: none;
         display: flex;
         align-items: flex-end;
@@ -9,12 +7,11 @@
         .header_logo_img {
             width: 3.2rem;
             margin: 0 1rem;
-            margin-right: 0.2rem;
+            margin-right: 1rem;
+            margin-left: 1rem;
         }
 
         .header_logo_text {
-            position: relative;
-            bottom: -0.5rem;
             color: var(--dark);
             font-size: 1.8rem;
             font-family: "Gwyner";
