--- a/src/styles/components/HomeAbout.scss
+++ b/src/styles/components/HomeAbout.scss
@@ -21,7 +21,7 @@
                 align-items: center;
                 justify-content: center;
                 width: 100%;
-                max-width: 137rem;
+                max-width: 127rem;
                 padding: 5rem 1rem;
 
                 h1 {
@@ -47,7 +47,7 @@
 
                     a {
                         text-decoration: none;
-                        margin: 20px;
+                        margin: 15px;
 
                         img {
                             width: 50px;
@@ -72,7 +72,7 @@
                 backdrop-filter: blur(2px);
 
                 .about_article {
-                    padding-left: 20%;
+                    padding-left: 40%;
                     h1 {
                         margin-bottom: 30px;
                     }
@@ -89,6 +89,7 @@
 
     @media (min-width: 1024px) {
         .about .about_gradient .about_article {
+            padding-left: 70rem;
             padding-top: 100px;
             padding-bottom: 100px;
 
