--- a/src/styles/components/molecules/headerRigth.scss
+++ b/src/styles/components/molecules/headerRigth.scss
@@ -10,6 +10,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            list-style: none;
             margin: 0;
             padding: 0;
 
