Se agrega el login y el registro, se modifican un poco las tarjetas de productos

--- a/src/styles/components/atoms/storeProductContainer.scss
+++ b/src/styles/components/atoms/storeProductContainer.scss
@@ -4,6 +4,9 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        border-top: 1px solid var(--neutral);
+        padding-top: 1.5rem;
+        margin-top: 0;
 
         .product_category {
             display: flex;
