avance en la vinculación de la API

--- a/src/styles/components/molecules/storeProduct.scss
+++ b/src/styles/components/molecules/storeProduct.scss
@@ -93,8 +93,9 @@
                 height: 50px;
                 width: 150px;
                 background-color: var(--primary);
-                border-radius: 10px;
+                border-radius: 15px;
                 border: none;
+                margin-top: 20px;
                 transition: 0.2s;
 
                 &:hover {
