--- a/src/styles/components/atoms/storeCategory.scss
+++ b/src/styles/components/atoms/storeCategory.scss
@@ -9,7 +9,9 @@
         height: 60px;
         width: 90%;
         max-width: 127rem;
-        box-shadow: 0px 0px 10px var(--neutral);
+        box-shadow: 0px 0px 5px var(--neutral);
+        border-radius: 15px;
+        overflow: hidden;
 
         margin: 0;
         padding: 0;
@@ -22,6 +24,13 @@
             font-size: 1.4rem;
             width: 100%;
             height: 100%;
+            z-index: 1;
+            transition: 0.2s;
+
+            &:hover {
+                z-index: 2;
+                transition: 0.2s;
+            }
 
             [class^="category_btn"] {
                 flex-grow: 1;
