Se agregan cambios en el header

--- a/src/styles/components/molecules/headerCenter.scss
+++ b/src/styles/components/molecules/headerCenter.scss
@@ -24,4 +24,11 @@
             display: block;
         }
     }
+
+    @media (min-width: 800px) {
+        .header_center {
+            position: absolute;
+            width: 100%;
+        }
+    }
 }
