--- a/src/styles/components/molecules/headerRigth.scss
+++ b/src/styles/components/molecules/headerRigth.scss
@@ -5,6 +5,7 @@
         display: flex;
         align-items: flex-end;
         margin-right: 3rem;
+        z-index: 100;
 
         .header_list {
             display: flex;
