--- a/src/styles/components/StoreProducts.scss
+++ b/src/styles/components/StoreProducts.scss
@@ -12,6 +12,19 @@
         @include storeProduct;
     }
 
+    .exception {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        padding: 4rem;
+
+        .spinner-border {
+            width: 10vw;
+            height: 10vw;
+        }
+    }
+
     @media (min-width: 600px) {
         .products {
             grid-template-columns: auto auto;
