--- a/src/styles/components/StoreStart.scss
+++ b/src/styles/components/StoreStart.scss
@@ -32,9 +32,10 @@
 
     @media (min-width: 800px) {
         .start .start_separator {
-            align-self: flex-start;
-            margin-left: 50px;
-            width: 100px;
+            align-self: center;
+            margin: 3rem;
+            width: 100%;
+            max-width: 15rem;
         }
     }
 }
