--- a/src/styles/components/atoms/headerNavItem.scss
+++ b/src/styles/components/atoms/headerNavItem.scss
@@ -7,6 +7,36 @@
         margin: 0 1rem;
         list-style: none;
 
+        &.active {
+            font-size: 1.4rem;
+            color: var(--neutralDark);
+            background-color: transparent;
+            border: 1px solid var(--neutralDark);
+            border-radius: 3rem;
+
+            padding: 0.8rem 2rem;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: var(--neutralDark);
+                color: var(--light);
+                transition: 0.3s;
+            }
+        }
+
+        &.register {
+            background-color: var(--primary);
+            color: var(--light);
+            border: 1px solid var(--primary);
+
+            &:hover {
+                background-color: var(--primaryHover);
+                border: 1px solid var(--primaryHover);
+                color: var(--light);
+                transition: 0.3s;
+            }
+        }
+
         .header_nav_item_link {
             display: flex;
             align-items: center;
