--- a/src/styles/components/atoms/logo.scss
+++ b/src/styles/components/atoms/logo.scss
@@ -1,7 +1,7 @@
 @mixin logo {
     .header_logo {
         text-decoration: none;
-        display: flex;
+        display: none;
         align-items: flex-end;
 
         .header_logo_img {
@@ -20,6 +20,12 @@
             span {
                 color: var(--primary);
             }
+        }
+    }
+
+    @media (min-width: 800px) {
+        .header_logo {
+            display: flex;
         }
     }
 }
