--- a/src/styles/containers/header.scss
+++ b/src/styles/containers/header.scss
@@ -25,6 +25,10 @@
             z-index: 100;
             margin: auto;
 
+            & > * {
+                margin-bottom: 0;
+            }
+
             @include headerLeft;
 
             @include headerCenter;
