Se agregan mejoras a la página y se agrega la sección de NotFound

--- a/src/styles/components/ContactMessage.scss
+++ b/src/styles/components/ContactMessage.scss
@@ -8,10 +8,12 @@
         margin: 4rem 0;
 
         h1 {
-            font-size: 1.8rem;
+            color: var(--neutralDark);
+            font-size: 2rem;
         }
 
         p {
+            color: var(--neutralDark);
             font-size: 1.4rem;
             margin: 20px 0;
         }
