--- a/src/styles/components/atoms/inputForm.scss
+++ b/src/styles/components/atoms/inputForm.scss
@@ -28,7 +28,7 @@
             padding: 0 5px;
             background-color: var(--neutral);
             color: var(--neutralDark);
-            border-radius: 5px;
+            border-radius: 2rem;
             border: 1px solid var(--neutral);
             transition: 0.2s;
         }
