--- a/src/styles/components/molecules/footerNav.scss
+++ b/src/styles/components/molecules/footerNav.scss
@@ -19,7 +19,7 @@
 
     @media (min-width: 1024px) {
         .footer_nav ul {
-            margin: 0 5vw;
+            margin: 0 2rem;
         }
     }
 }
