--- a/src/styles/components/ContactData.scss
+++ b/src/styles/components/ContactData.scss
@@ -9,11 +9,13 @@
         width: 100%;
 
         .contact_data_title {
+            color: var(--neutralDark);
             text-align: center;
-            font-size: 1.8rem;
+            font-size: 2rem;
         }
 
         .data {
+            color: var(--neutralDark);
             width: 90%;
             margin: 3rem 0;
             padding: 0;
@@ -31,10 +33,10 @@
             a {
                 width: 100%;
                 height: 100%;
-                margin: 10px;
+                margin: 1rem;
 
                 ion-icon {
-                    font-size: 24px;
+                    font-size: 3.2rem;
                     color: var(--dark);
                     transition: 0.2s;
 
