--- a/src/styles/components/atoms/contactDataItem.scss
+++ b/src/styles/components/atoms/contactDataItem.scss
@@ -4,17 +4,17 @@
         align-items: center;
         list-style: none;
         border: 1px solid var(--neutral);
-        border-radius: 10px;
-        margin: 20px;
-        padding: 20px;
+        border-radius: 2rem;
+        margin: 2rem;
+        padding: 2rem;
 
         &:hover {
-            box-shadow: 0px 0px 10px var(--neutral);
+            box-shadow: 0rem 0rem 1rem var(--neutral);
         }
 
         ion-icon {
-            font-size: 32px;
-            margin-right: 20px;
+            font-size: 3.2rem;
+            margin-right: 2rem;
             color: var(--primary);
         }
 
@@ -25,7 +25,7 @@
             }
 
             p {
-                font-size: 1.2rem;
+                font-size: 1.4rem;
                 margin-bottom: 0;
             }
         }
