--- a/src/styles/components/atoms/contactInputForm.scss
+++ b/src/styles/components/atoms/contactInputForm.scss
@@ -8,11 +8,16 @@
 
         input {
             background-color: var(--light);
-            height: 30px;
             width: 98%;
-            border-radius: 5px;
-            border: 1px solid var(--neutralDark);
+            border-radius: 3rem;
+            border: 1px solid var(--neutral);
             font-size: 1.4rem;
+            padding: 1rem;
+
+            &:hover {
+                box-shadow: none;
+                transition: 0.2s;
+            }
         }
 
         .contact_form_textArea {
@@ -21,9 +26,9 @@
             height: 150px;
             font-size: 1.4rem;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 1.5rem;
             background-color: var(--light);
-            border: 1px solid var(--neutralDark);
+            border: 1px solid var(--neutral);
         }
     }
 
