--- a/src/styles/components/molecules/contactForm.scss
+++ b/src/styles/components/molecules/contactForm.scss
@@ -12,6 +12,7 @@
         @include contactInputForm;
 
         button {
+            justify-self: center;
             margin: 0;
             margin-top: 7px;
             display: flex;
@@ -20,10 +21,10 @@
             text-decoration: none;
             font-size: 1.4rem;
             color: var(--light);
-            height: 50px;
             width: 100%;
+            max-width: 20rem;
             background-color: var(--primary);
-            border-radius: 5px;
+            border-radius: 3rem;
             border: none;
 
             &:hover {
