--- a/src/styles/components/molecules/loginForm.scss
+++ b/src/styles/components/molecules/loginForm.scss
@@ -16,7 +16,7 @@
             width: 150px;
             background-color: var(--primary);
             color: var(--light);
-            border-radius: 5px;
+            border-radius: 2rem;
             border: none;
             transition: 0.2s;
 
