Se agregan cambios en la store

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,6 +3,7 @@
     --primary: #bf3c1f;
     --primaryHover: #751610;
 
+    --lightBright: #fdfbf9;
     --light: #f7f4ef;
     --dark: #281200;
     
