--- a/src/styles/components/StoreProducts.scss
+++ b/src/styles/components/StoreProducts.scss
@@ -2,7 +2,11 @@
 
 @mixin storeProducts {
     .products {
-        display: grid;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 1rem;
         width: 90%;
         max-width: 137rem;
         align-items: stretch;
@@ -25,7 +29,7 @@
         }
     }
 
-    @media (min-width: 600px) {
+    /* @media (min-width: 600px) {
         .products {
             grid-template-columns: auto auto;
         }
@@ -41,5 +45,5 @@
         .products {
             grid-template-columns: auto auto auto auto;
         }
-    }
+    } */
 }
