--- a/src/styles/components/atoms/headerNavItem.scss
+++ b/src/styles/components/atoms/headerNavItem.scss
@@ -10,7 +10,7 @@
         &.active {
             font-size: 1.4rem;
             color: var(--neutralDark);
-            background-color: transparent;
+            background-color: var(--light);
             border: 1px solid var(--neutralDark);
             border-radius: 3rem;
 
