--- a/src/styles/components/atoms/storeProductContainer.scss
+++ b/src/styles/components/atoms/storeProductContainer.scss
@@ -1,12 +1,14 @@
 @mixin storeProductContainer {
     .product_container_category {
+        position: relative;
+        height: 1.5rem;
+        bottom: 1.1rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        border-top: 1px solid var(--neutral);
-        padding-top: 1.5rem;
-        margin-top: 0;
+        margin: 0;
+        padding: 0 2rem;
 
         .product_category {
             display: flex;
@@ -15,9 +17,10 @@
             justify-content: center;
             font-size: 1.4rem;
             text-align: center;
-            border: 1px solid var(--neutral);
-            border-radius: 10px;
-            padding: 2px 15px;
+            background-color: var(--neutralDark);
+            color: var(--light);
+            border-radius: 2rem;
+            padding: 0 2rem;
             margin: 5px 0;
         }
 
@@ -25,8 +28,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 5rem;
-            height: 5rem;
+            width: 4rem;
+            height: 4rem;
             font-size: x-large;
             border-radius: 50%;
             border: 1px solid var(--neutral);
@@ -37,7 +40,6 @@
 
             &:hover {
                 cursor: pointer;
-                box-shadow: 0px 0px 10px var(--neutral);
                 background-color: var(--light);
                 color: var(--primary);
                 transition: 0.2s;
