--- a/src/styles/components/molecules/storeProduct.scss
+++ b/src/styles/components/molecules/storeProduct.scss
@@ -6,15 +6,17 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        width: 320px;
+
+        overflow: hidden;
+        width: 360px;
         min-height: 450px;
-        max-height: 650px;
+        max-height: 720px;
         font-size: 1rem;
         text-align: center;
         border: 1px solid var(--neutral);
         border-radius: 10px;
         padding: 0;
-        margin: 30px 0;
+        margin: 20px 0;
         transition: 0.2s;
 
         &:hover {
@@ -32,7 +34,7 @@
             font-weight: 400;
             align-self: flex-start;
             margin-top: 0;
-            margin-bottom: 2rem;
+            margin-bottom: 1.5rem;
         }
 
         p {
@@ -52,7 +54,7 @@
             justify-content: center;
             overflow: hidden;
             width: 100%;
-            height: 250px;
+            min-height: 250px;
             border-bottom: 1px solid var(--neutral);
             border-radius: 10px 10px 0 0;
             margin: 0;
@@ -64,45 +66,178 @@
         }
 
         .container_info {
+            position: relative;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
             width: 100%;
-            padding: 20px;
+            padding: 0;
             margin: 0;
 
             @include storeProductContainer;
 
-            .product_description {
-                display: none;
+            .product_code {
+                font-size: 1.2rem;
+                margin-top: 2rem;
+                padding: 0 2rem;
+
+                strong {
+                    color: var(--dark);
+                }
             }
 
-            .product_price .price {
-                font-size: 2.2rem;
-                color: var(--neutralDark);
-            }
-
-            .product_btn {
+            .container_title_price {
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                text-decoration: none;
-                font-size: 1.4rem;
-                color: var(--light);
-                height: 50px;
-                width: 150px;
-                background-color: var(--primary);
-                border-radius: 15px;
-                border: none;
-                margin-top: 20px;
-                transition: 0.2s;
+                justify-content: space-between;
+                width: 100%;
+                margin: 0;
+                margin-bottom: 2rem;
+                padding: 0 2rem;
 
-                &:hover {
-                    cursor: pointer;
-                    background-color: var(--primaryHover);
-                    box-shadow: 0px 0px 18px var(--neutral);
+                .product_title {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 100%;
+                    color: var(--dark);
+                    font-size: 1.8rem;
+                    font-weight: bolder;
+                    margin: 0;
+                }
+
+                .product_price {
+                    margin: 0;
+
+                    .price {
+                        font-weight: bolder;
+                        font-size: 2.2rem;
+                        color: var(--primary);
+                        margin: 0.5rem;
+                    }
+                }
+            }
+
+            .product_description {
+                display: flex;
+                flex-direction: column;
+
+                font-size: 1.4rem;
+                font-weight: 400;
+                line-height: 180%;
+                text-align: left;
+                margin: 0;
+                margin-bottom: 2rem;
+                padding: 0 2rem;
+
+                strong {
+                    color: var(--dark);
+                    font-size: 1.2rem;
+                    margin: 0;
+                    margin-bottom: 5px;
+                }
+            }
+
+            .product_form {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 1rem;
+                width: 100%;
+                margin: 0;
+
+                .product_options {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    gap: 1rem;
+                    width: 100%;
+                    margin: 0;
+                    padding: 0 2rem;
+
+                    strong {
+                        text-align: start;
+                        color: var(--dark);
+                        font-size: 1.2rem;
+                        margin: 0;
+                    }
+
+                    ul {
+                        display: flex;
+                        align-items: center;
+                        gap: 1rem;
+                        list-style: none;
+                        margin: 0;
+
+                        * {
+                            margin: 0;
+                            padding: 0;
+                        }
+
+                        input[type="radio"] {
+                            display: none;
+                        }
+                    }
+
+                    .select_color ion-icon {
+                        cursor: pointer;
+                        font-size: 2.4rem;
+                        width: 2.4rem;
+                        height: 2.4rem;
+                        color: var(--dark);
+                        border-radius: 50%;
+                        border: 1px solid var(--neutral);
+                        transition: 0.2s;
+
+                        &:hover {
+                            opacity: 0.8;
+                            border: 1px solid var(--neutralDark);
+                            transition: 0.2s;
+                        }
+                    }
+
+                    .select_size {
+                        label {
+                            cursor: pointer;
+                            font-size: 1.4rem;
+                            border-radius: 50%;
+                            padding: 0.2rem;
+                            border: 1px solid transparent;
+                            transition: 0.2s;
+
+                            &:hover {
+                                color: var(--primaryHover);
+                                transition: 0.2s;
+                            }
+                        }
+                    }
+                }
+
+                .product_btn {
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-decoration: none;
+                    font-size: 1.4rem;
+                    color: var(--light);
+                    width: 100%;
+                    background-color: var(--primary);
+
+                    border: none;
+                    padding: 1.5rem;
+                    margin: 0;
+                    margin-top: 1rem;
                     transition: 0.2s;
+
+                    &:hover {
+                        cursor: pointer;
+                        background-color: var(--primaryHover);
+                        box-shadow: 0px 0px 18px var(--neutral);
+                        transition: 0.2s;
+                    }
                 }
             }
         }
