--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,4 +1,5 @@
 @import "../components/HomePresentation.scss";
+@import "../components/HomeStore.scss";
 @import "../components/HomeCategories.scss";
 @import "../components/HomeProducts.scss";
 @import "../components/HomeAbout.scss";
@@ -9,6 +10,7 @@ main {
     align-items: center;
 
     @include HomePresentation;
+    @include HomeStore;
     @include HomeCategories;
     @include homeProducts;
     @include homeAbout;
