--- a/src/styles/components/molecules/homeStoreWholesale.scss
+++ b/src/styles/components/molecules/homeStoreWholesale.scss
@@ -18,10 +18,10 @@
             justify-content: center;
             gap: 1rem;
             font-size: 1.8rem;
-            color: var(--neutralDark);
+            color: var(--primary);
 
             ion-icon {
-                color: var(--neutralDark);
+                color: var(--primary);
                 font-size: 2.4rem;
             }
         }
