--- a/src/styles/components/molecules/storeProduct.scss
+++ b/src/styles/components/molecules/storeProduct.scss
@@ -14,7 +14,7 @@
         font-size: 1rem;
         text-align: center;
         border: 1px solid var(--neutral);
-        border-radius: 10px;
+        border-radius: 20px;
         padding: 0;
         margin: 20px 0;
         transition: 0.2s;
@@ -60,7 +60,9 @@
             margin: 0;
 
             img {
+                object-fit: cover;
                 width: 100%;
+                height: 100%;
                 margin: 0;
             }
         }
@@ -70,9 +72,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between;
+            justify-content: start;
             width: 100%;
+            height: 100%;
             padding: 0;
+            padding-bottom: 14rem;
             margin: 0;
 
             @include storeProductContainer;
@@ -149,6 +153,8 @@
                 margin: 0;
 
                 .product_options {
+                    position: absolute;
+                    bottom: 6rem;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -181,15 +187,27 @@
                         }
                     }
 
-                    .select_color ion-icon {
+                    .select_color label {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
                         cursor: pointer;
                         font-size: 2.4rem;
-                        width: 2.4rem;
-                        height: 2.4rem;
-                        color: var(--dark);
+                        width: 6rem;
+                        height: 6rem;
                         border-radius: 50%;
                         border: 1px solid var(--neutral);
+
+                        padding: 0.5rem;
                         transition: 0.2s;
+                        overflow: hidden;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
 
                         &:hover {
                             opacity: 0.8;
@@ -197,26 +215,11 @@
                             transition: 0.2s;
                         }
                     }
-
-                    .select_size {
-                        label {
-                            cursor: pointer;
-                            font-size: 1.4rem;
-                            border-radius: 50%;
-                            padding: 0.2rem;
-                            border: 1px solid transparent;
-                            transition: 0.2s;
-
-                            &:hover {
-                                color: var(--primaryHover);
-                                transition: 0.2s;
-                            }
-                        }
-                    }
                 }
 
                 .product_btn {
-                    position: relative;
+                    position: absolute;
+                    bottom: 0;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -245,6 +248,7 @@
 
     @media (min-width: 800px) {
         .product .product_title {
+            text-align: start;
             align-self: flex-start;
         }
     }
