--- a/src/styles/containers/asideLeftDashboard.scss
+++ b/src/styles/containers/asideLeftDashboard.scss
@@ -1,18 +1,7 @@
 @mixin asideLeftDashboard {
     /* Scroll personalizado */
 
-    .aside__panel::-webkit-scrollbar {
-        width: 7px;
-        height: 100%;
-    }
-
-    .aside__panel::-webkit-scrollbar-thumb {
-        background-color: var(--neutral);
-        border-radius: 5px;
-        height: 50%;
-    }
-
-    .aside__panel {
+    .aside_left {
         overflow: scroll;
         position: fixed;
         left: 0;
@@ -20,87 +9,101 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: start;
-        width: 260px;
+        width: 270px;
         height: 100%;
         min-height: 100vh;
         background-color: var(--neutralDark);
         color: var(--light);
         z-index: 1;
-        padding-left: 3rem;
+        padding: 0 3rem;
+
+        &::-webkit-scrollbar {
+            width: 7px;
+            height: 100%;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--neutral);
+            border-radius: 5px;
+            height: 50%;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin: 3rem 0;
+        }
+
+        .btn-aside_left {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            width: 100%;
+            font-size: 1.4rem;
+            color: var(--light);
+            background-color: var(--primary);
+            border: 1px solid var(--primary);
+            border-radius: 3rem;
+
+            padding: 0.8rem 2rem;
+            margin: 1rem 0;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: var(--primaryHover);
+                border: 1px solid var(--primaryHover);
+                color: var(--light);
+                transition: 0.3s;
+            }
+
+            ion-icon {
+                margin: 0 1rem;
+                font-size: 2.2rem;
+            }
+        }
 
         .separador-aside {
-            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: var(--light);
+            margin: 0.5rem 0;
         }
-    }
 
-    .aside__panel h1 {
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
+        section {
+            display: flex;
+            flex-direction: column;
+            margin: 1rem 0;
 
-    .aside__panel__btn {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        text-decoration: none;
-        width: 90%;
-        height: 4rem;
-        background-color: var(--primary);
-        border-radius: 0.5rem;
-        color: var(--neutralLight);
-        font-size: 1.4rem;
-        padding: 0 1rem;
-        margin: 0;
-        transition: 0.2s;
-    }
+            h3 {
+                text-align: start;
+                margin-bottom: 1.5rem;
+            }
 
-    .aside__panel__btn:hover {
-        background-color: var(--primaryHover);
-        cursor: pointer;
-        transition: 0.2s;
-    }
+            .nav_list {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
 
-    .aside__panel__btn ion-icon {
-        margin: 0 1rem;
-        font-size: 2.2rem;
-    }
+                .header_nav_item {
+                    margin: 0.5rem 0;
 
-    .aside__panel .separador-aside {
-        margin: 3rem 0;
-    }
+                    ion-icon {
+                        color: var(--light);
+                        margin-right: 1rem;
+                    }
 
-    .aside__panel section {
-        display: flex;
-        flex-direction: column;
-    }
+                    h4 {
+                        color: var(--neutral);
+                        transition: 0.2s;
 
-    .aside__panel section h3 {
-        margin-bottom: 1.5rem;
-    }
-
-    .aside__panel section .nav-header__list {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-    }
-
-    .aside__panel section .nav-header__list .nav-header__list__item {
-        margin: 0.5rem 0;
-    }
-
-    .aside__panel section .nav-header__list ion-icon {
-        color: var(--light);
-        margin-right: 1rem;
-    }
-
-    .aside__panel section .nav-header__list h4 {
-        color: var(--neutral);
-        transition: 0.2s;
-    }
-
-    .aside__panel section .nav-header__list h4:hover {
-        color: var(--light);
-        transition: 0.2s;
+                        &:hover {
+                            color: var(--light);
+                            transition: 0.2s;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
